--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /CustomerManager/.vs/CustomerManager
+/CustomerManager/CustomerManager/bin/Debug/netcoreapp3.1
+/CustomerManager/CustomerManager/obj
