--- a/CustomerManager/CustomerManager/appsettings.json
+++ b/CustomerManager/CustomerManager/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CustomerManager-F7A4548D-4CBA-4310-AC3A-FCCEC1168B6A;Trusted_Connection=True;MultipleActiveResultSets=true"
+     "DefaultConnection": "Server=.;Database=CustomerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
